# arrowflow

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
ai_agent/: __init__.py  llm_provider.py  pipeline_agent.py  pipeline_compiler.py
airflow/: Dockerfile
airflow/dags/: arrow_xcom_old.py  ecommerce_pipeline.py  etl_dag_arrow_param_prep_v3.py  etl_dag_arrow_param_prep_v3_quality.py  etl_dag_arrow_parametrized.py  etl_dag_arrow_preparator_v2.py  etl_dag_arrow_preparator_v2_parametrized.py  etl_dag_parametrized_testing.py  etl_dag_testing.py  hr_analytics_pipeline.py  parametrized_preparator_v3.py  parametrized_preparator_v3_quality.py  parametrized_preparator_v4_ia.py  parametrized_preparator_v4_ia_multitasks copy 2.py  parametrized_preparator_v4_ia_multitasks copy.py  parametrized_preparator_v4_quality.py  parametrized_preparator_v4_quality_join.py  preparator_v2.py  weather_api_pipeline.py  xcom_file_utils.py
benchmark/: generate_hr_dataset.py  monolithic_pipeline.py  run_benchmark.py
data/demo/: ecommerce_orders.csv  hr_sample.csv
docs/: access-credentials.md  architecture.md  demo-guide.md  extending.md
examples/pipelines/: README.md  ecommerce_analytics.yaml  hr_analytics.yaml  weather_data.yaml
preparator/: preparator_v2.py  preparator_v3.py  preparator_v4.py  services_config.json
prometheus/: prometheus.yml
schemas/: pipeline_schema.json  service_registry.json
streamlit_app/: Dockerfile  app.py  requirements.txt
tests/: conftest.py
(+97 files in other folders)
